# metal_3_example_rs

./: .gitignore  Cargo.toml  README.md  angel.mtl  build.rs  copy_for_debug.sh  shaders.metal  shaders.metallib
shaders/: geometry.hlsl
src/: free_cam.rs  indirect_command.rs  main.rs  mesh.rs  shader_compiler.rs  texture.rs
