[package]
name = "metal_3_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bytemuck = "1.14.0"
core-graphics-types = "0.1.3"
dolly = "0.4.2"
fast-obj = { git = "https://github.com/projectkml/fast-obj-rs" }
image = "0.24.7"
objc = "0.2.7"
glam = "0.25.0"
metal = "0.27.0"
meshopt = { git = "https://github.com/projectkml/meshopt-rs" }
cocoa = "0.25.0"
winit = "0.27"