[package]
name = "metal_3_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bytemuck = "1.14.0"
dispatch2 = "0.3.0"
dolly = "0.4.2"
fast-obj = { git = "https://github.com/projectkml/fast-obj-rs" }
image = "0.24.7"
objc = "0.2.7"
glam = "0.25.0"
objc2 = { version = "0.6.3", features = [] }
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-metal = { version = "0.3.2", features = [
    "MTLAccelerationStructureTypes",
    "MTLLibrary",
    "MTLRenderPipeline",
    "MTLRenderCommandEncoder",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLPixelFormat",
    "MTLDevice",
    "MTLDrawable",
    "MTLRenderPass"] }
meshopt = { git = "https://github.com/projectkml/meshopt-rs" }
sdl3 = { version = "0.16.1", features = ["build-from-source-static"] }