[package]
name = "metal_3_example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
bytemuck = "1.14.0"
dispatch2 = "0.3.0"
dolly = "0.4.2"
fast-obj = { git = "https://github.com/projectkml/fast-obj-rs" }
hassle-rs = "0.12.0"
image = "0.24.7"
glam = "0.25.0"
objc2 = { version = "0.6.3", features = [] }
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-metal = { version = "0.3.2", features = [
    "MTLAccelerationStructureTypes",
    "MTLLibrary",
    "MTLRenderPipeline",
    "MTLRenderCommandEncoder",
    "MTLCommandBuffer",
    "MTLCommandEncoder",
    "MTLCommandQueue",
    "MTLPixelFormat",
    "MTLDevice",
    "MTLDrawable",
    "MTLRenderPass"] }
meshopt = { git = "https://github.com/projectkml/meshopt-rs" }
metal_irconverter = { git = "https://github.com/ProjectKML/metal_irconverter_rs"}
sdl3 = { version = "0.16.1", features = ["build-from-source-static"] }